refactor: move services & types into modules
- Move health-check service into modules.
- Create type for 'produce'.
- Add new endpoint to get produce items:
	[GET] /api/produce

- Update README for new endpoint.

--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -362,6 +362,8 @@ dependencies = [
 ]
 modules = [
 	{org = "balletops", packageName = "Farm2Market_backend", moduleName = "Farm2Market_backend"},
+	{org = "balletops", packageName = "Farm2Market_backend", moduleName = "Farm2Market_backend.services"},
+	{org = "balletops", packageName = "Farm2Market_backend", moduleName = "Farm2Market_backend.types"},
 	{org = "balletops", packageName = "Farm2Market_backend", moduleName = "Farm2Market_backend.utils"}
 ]
 
